--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -102,6 +102,7 @@ nav .main_menu ul li a {
 }
 
 /* Hero Section Style  */
+#hero_section{}
 .hero_content{
     padding: 20px 0px;
 }
@@ -134,6 +135,64 @@ nav .main_menu ul li a {
 .hero-right .hero_img img{
     max-width: 100%;
 }
+
+
+/* corriculam Section  */
+#corriculam_section{
+    padding: 60px 0px;
+    background: url('../images/bg.png') no-repeat center center / cover;
+}
+.corriculam_title h1{
+    text-align: center;
+}
+.corriculam_card {
+    margin-top: 80px;
+}
+.corriculam_item{
+    flex-basis: 31%;
+    text-align: center;
+    padding: 30px 20px;
+    background-image: linear-gradient(rgba(222, 245, 255, 1) 0%,rgba(255, 255, 255, 0) 40%);
+    border-radius: 1rem;
+    box-shadow: 0 0 28px 1px rgba(0, 0, 0, 0.05);
+    border: 1px solid rgba(222, 245, 255, 1);
+}
+.corriculam_card > :nth-child(2){
+    background-image: linear-gradient(rgba(255, 244, 220, 1) 0%,rgba(255, 255, 255, 0) 40%);
+}
+.corriculam_card > :nth-child(3){
+    background-image: linear-gradient(rgba(238, 225, 255, 1) 0%,rgba(255, 255, 255, 0) 40%);
+}
+.corriculam_item .item_text h2{
+    margin-top: 30px;
+}
+.corriculam_item .item_text p{
+    margin: 30px 0px;
+    line-height: 1.6rem;
+    font-size: 1rem;
+}
+.corriculam_item .item_text button {
+    display: inline-block;
+    background: none;
+    border: none;
+    font-size: 1rem;
+    color: rgba(100, 200, 255, 1);
+    font-weight: 600;
+}
+.corriculam_card > :nth-child(2) .item_text button{
+    color: rgba(240, 170, 0, 1);
+}
+.corriculam_card > :nth-child(2) .item_text button{
+    color: rgba(135, 0, 255, 1);
+}
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 566px) {
     .fixed_container{
@@ -173,6 +232,16 @@ nav .main_menu ul li a {
     .empower{
         display: block;
     }
+
+    /* Corriculam Section  */
+    .corriculam_card{
+        flex-direction: column;
+        row-gap: 30px;
+        margin-top: 30px;
+    }
+    .corriculam_title h1 {
+        font-size: 2rem;
+    }
 }
 
 @media screen and (min-width:567px) and (max-width:767px) {
@@ -199,6 +268,15 @@ nav .main_menu ul li a {
     }
     .empower{
         display: block;
+    }
+    /* Corriculam Section  */
+    .corriculam_card{
+        margin-top: 30px;
+        flex-wrap: wrap;
+        row-gap: 10px;
+    }
+    .corriculam_item{
+        flex-basis: calc(50% - 10px);
     }
 }
 
