--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -250,9 +250,83 @@ nav .main_menu ul li a {
     font-size: 1rem;
     line-height: 1.8rem;
 }
+.item_hide{
+    display: none;
+}
+.stories_btn{
+    text-align: center;
+    margin-top: 70px;
+}
+.stories_btn button{
+    background-color: black;
+    font-weight: 400;
+}
 
-
-
+/* Footer style  */
+.footer_section{
+    background-color: rgba(1, 172, 253, 1);
+    padding: 100px 0px;
+    color: white !important;
+}
+.footer_des {
+    width: 70%;
+}
+.footer_des p {
+    font-size: 20px;
+    line-height: 1.7rem;
+    margin-top: 30px;
+}
+.footer_info .item_1 {
+    flex-basis: 50%;
+}
+.footer_info .item_2{
+    flex-basis: 25%;
+}
+.footer_info .item_3{
+    flex-basis: 25%;
+}
+.footer_logo h1 {
+    font-size: 42px;
+    width: 70%;
+}
+.footer_logo {
+    align-items: center;
+    width: 70%;
+}
+.footer_logo img {
+    width: 103px;
+    margin-top: -13px;
+}
+.footer_menu h2 {
+    font-size: 30px;
+    font-weight: 400;
+}
+.footer_menu ul li {
+    font-size: 20px;
+    margin-top: 20px;
+}
+.footer_menu ul li a{
+    color: white;
+}
+.footer_icon ul {
+    margin-top: 20px;
+}
+.footer_icon ul li a {
+    font-size: 40px;
+    margin-right: 15px;
+}
+.footer_icon ul > :nth-child(1) a {
+    color: #183edf;
+}
+.footer_icon ul > :nth-child(2) a {
+    color: #000000;
+}
+.footer_icon ul > :nth-child(3) a {
+    color: #743f3f;
+}
+.footer_icon ul > :nth-child(4) a {
+    color: #cf3e3e;
+}
 
 
 @media screen and (max-width: 566px) {
@@ -309,18 +383,27 @@ nav .main_menu ul li a {
 
     /* Stories Section  */
     .stories_card {
-        grid-template-columns: repeat(1,1fr);
-        row-gap: 20px;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
     }
     .stories_card .item_1{
         display: none;
     }
-    .stories_card .stories_item{
-        width: 80%;
-        margin: 0 auto;
-    }
     .stories_card .stories_item .stories_text{
-        padding: 40px 20px 30px 30px;
+        padding: 30px 30px;
+    }
+    .stories_card .stories_item .stories_text h2{
+        line-height: 1.3rem;
+        font-size: 0.7rem;
+    }
+    .item_hide{
+        display: block;
+    }
+    
+    /* footer Section  */
+    .footer_info{
+        flex-direction: column;
+        row-gap: 30px;
     }
 }
 
@@ -368,6 +451,43 @@ nav .main_menu ul li a {
     }
     .stories_card .stories_item .stories_text{
         padding: 40px 20px 30px 30px;
+    }
+
+
+    /* footer Section  */
+    .footer_info{
+        flex-direction: column;
+        row-gap: 30px;
+        text-align: center;
+    }
+    .footer_des {
+        width: 100%;
+    }
+    .footer_des p {
+        font-size: 20px;
+        line-height: 1.7rem;
+        margin-top: 30px;
+    }
+    .footer_info .item_1 {
+        flex-basis: 100%;
+    }
+    .footer_info .item_2{
+        flex-basis: 100%;
+    }
+    .footer_info .item_3{
+        flex-basis: 100%;
+    }
+    .footer_logo h1 {
+        font-size: 42px;
+        width: 70%;
+    }
+    .footer_logo {
+        width: 80%;
+        margin: auto;
+    }
+    .footer_icon ul {
+        margin-top: 20px;
+        justify-content: center;
     }
 }
 
