--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -188,9 +188,9 @@ nav .main_menu ul li a {
     font-weight: 600;
 }
 .corriculam_card > :nth-child(2) .item_text button{
-    color: rgba(240, 170, 0, 1);
+    color: rgb(243, 86, 24);
 }
-.corriculam_card > :nth-child(2) .item_text button{
+.corriculam_card > :nth-child(3) .item_text button{
     color: rgba(135, 0, 255, 1);
 }
 
